--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cnd/bolt",
+    "name": "bolt/bolt",
     "description": "Sophisticated, lightweight & simple CMS",
     "homepage": "http://bolt.cm",
     "keywords": [
